# dronesploit

./: .gitignore  .readthedocs.yml  DISCLAIMER.md  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  python-package.yml
banners/: banner1.asc  banner2.asc  banner3.asc  banner4.asc  banner5.asc  banner6.asc
commands/: wifi.py
docs/: index.md  mkdocs.yml  newmodules.md  quickstart.md  requirements.txt  scenario.md  scenarios.md
docs/js/: collapsible-navbar.js  theme.js
docs/pages/: index.md  newmodules.md  quickstart.md  requirements.txt
docs/pages/css/: extra.css
docs/pages/js/: collapsible-navbar.js  theme.js
docs/pages/scenarios/: dji-tello.md  hobbico-cme.md  hobbico-flitt.md  index.md
docs/scenarios/: dji-tello.md  hobbico-cme.md  hobbico-flitt.md
dronesploit/: __info__.py  __init__.py  __main__.py
dronesploit/_src/commands/: generic.py  wifi.py
dronesploit/_src/modules/auxiliary/wifi/: crack.py  deauth.py  sniff.py  wordlist.txt
dronesploit/_src/modules/command/dji/: tello.py
dronesploit/_src/modules/command/hobicco/: cme.py  flitt.py
dronesploit/_src/modules/exploit/hobbico/: cme.py  flitt.py
dronesploit/banners/: banner3.asc  banner5.asc
dronesploit/commands/: wifi.py
dronesploit/drones/: __init__.py  dji.py  hobbico.py
dronesploit/generic/: __init__.py  decorators.py  mixins.py
dronesploit/lib/: __init__.py
dronesploit/lib/drones/: __init__.py  dji.py  hobbico.py
dronesploit/lib/radio/: NincoAirModule.py  SDRModule.py
dronesploit/lib/wifi/: __init__.py  drone.py  mixin.py
dronesploit/modules/auxiliary/radio/: sniffNinco.py  sniffXN297.py
dronesploit/modules/auxiliary/wifi/: crack.py  deauth.py  sniff.py
dronesploit/modules/command/dji/: tello.py
dronesploit/modules/command/hobicco/: cme.py  flitt.py
dronesploit/modules/command/maginon/: maginon.py
dronesploit/modules/command/nincoair/: nincoair.py
dronesploit/modules/command/udirc/: udirc.py
dronesploit/modules/exploit/hobbico/: cme.py  flitt.py
dronesploit/modules/exploit/nincoair/: nincoair.py
dronesploit/wifi/: __init__.py  drone.py  mixin.py
lib/: __init__.py  wifi.py
lib/drones/: __init__.py  dji.py  hobbico.py
lib/wifi/: __init__.py  drone.py  mixin.py  regex.py  wpa.py
modules/auxiliary/: wifi.py
modules/auxiliary/wifi/: crack.py  deauth.py  sniff.py
modules/command/dji/: tello.py
modules/command/hobicco/: cme.py  flitt.py
modules/exploit/hobbico/: cme.py  flitt.py
modules/exploits/cme/: changes.py  generic.py  requests.py  update.py
modules/scanning/: find.py
modules/wifi/: crack.py  deauth.py  generic.py  sniff.py  wordlist.txt
src/dronesploit/: VERSION.txt  __conf__.py  __info__.py  __init__.py  __main__.py
src/dronesploit/_src/banners/: banner1.asc  banner2.asc  banner3.asc  banner4.asc  banner5.asc  banner6.asc
src/dronesploit/_src/commands/: generic.py  wifi.py
src/dronesploit/_src/modules/auxiliary/wifi/: crack.py  deauth.py  sniff.py  wordlist.txt
src/dronesploit/_src/modules/command/dji/: tello.py
src/dronesploit/_src/modules/command/hobicco/: cme.py  flitt.py
src/dronesploit/_src/modules/exploit/hobbico/: cme.py  flitt.py
src/dronesploit/drones/: __init__.py  dji.py  hobbico.py
src/dronesploit/generic/: __init__.py  decorators.py  mixins.py
src/dronesploit/wifi/: __init__.py  drone.py  mixin.py
src/lib/drones/: dji.py
src/lib/wifi/: drone.py
src/modules/auxiliary/wifi/: crack.py  deauth.py
src/modules/exploit/hobbico/: flitt.py
