[metadata]
name = dronesploit
version = file: dronesploit/VERSION.txt
author = Alexandre D'Hondt
author_email = alexandre.dhondt@gmail.com
url = https://github.com/dhondta/dronesploit
description = Drone pentesting framework console
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    drone
    pentesting
    framework
license = AGPLv3
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = False
install_requires =
    sploitkit>=0.4.0
setup_requires = setuptools
python_requires = >=3.6,<4

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    dronesploit = dronesploit.__main__:main
